@@ -893,15 +893,67 @@ name|Object
 name|updates
 parameter_list|)
 block|{
+name|boolean
+name|ignoreCase
+init|=
+name|getIgnoreCase
+argument_list|()
+decl_stmt|;
+name|boolean
+name|madeChanges
+init|=
+literal|false
+decl_stmt|;
 if|if
 condition|(
-operator|!
+name|updates
+operator|instanceof
+name|List
+condition|)
+block|{
+name|madeChanges
+operator|=
+name|applyListUpdates
+argument_list|(
 operator|(
+name|List
+argument_list|<
+name|String
+argument_list|>
+operator|)
+name|updates
+argument_list|,
+name|ignoreCase
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
 name|updates
 operator|instanceof
 name|Map
-operator|)
 condition|)
+block|{
+name|madeChanges
+operator|=
+name|applyMapUpdates
+argument_list|(
+operator|(
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+operator|)
+name|updates
+argument_list|,
+name|ignoreCase
+argument_list|)
+expr_stmt|;
+block|}
+else|else
 block|{
 throw|throw
 operator|new
@@ -921,21 +973,167 @@ operator|.
 name|getName
 argument_list|()
 operator|+
-literal|"); expected a JSON object (Map)!"
+literal|"); expected a JSON object (Map or List)!"
 argument_list|)
 throw|;
 block|}
+return|return
+name|madeChanges
+condition|?
+name|getStoredView
+argument_list|()
+else|:
+literal|null
+return|;
+block|}
+DECL|method|applyListUpdates
+specifier|protected
+name|boolean
+name|applyListUpdates
+parameter_list|(
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|jsonList
+parameter_list|,
 name|boolean
 name|ignoreCase
-init|=
-name|getIgnoreCase
-argument_list|()
-decl_stmt|;
+parameter_list|)
+block|{
 name|boolean
 name|madeChanges
 init|=
 literal|false
 decl_stmt|;
+for|for
+control|(
+name|String
+name|term
+range|:
+name|jsonList
+control|)
+block|{
+comment|// find the mappings using the case aware key
+name|String
+name|origTerm
+init|=
+name|term
+decl_stmt|;
+name|term
+operator|=
+name|applyCaseSetting
+argument_list|(
+name|ignoreCase
+argument_list|,
+name|term
+argument_list|)
+expr_stmt|;
+name|CasePreservedSynonymMappings
+name|cpsm
+init|=
+name|synonymMappings
+operator|.
+name|get
+argument_list|(
+name|term
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|cpsm
+operator|==
+literal|null
+condition|)
+name|cpsm
+operator|=
+operator|new
+name|CasePreservedSynonymMappings
+argument_list|()
+expr_stmt|;
+name|Set
+argument_list|<
+name|String
+argument_list|>
+name|treeTerms
+init|=
+operator|new
+name|TreeSet
+argument_list|<>
+argument_list|()
+decl_stmt|;
+name|treeTerms
+operator|.
+name|addAll
+argument_list|(
+name|jsonList
+argument_list|)
+expr_stmt|;
+name|treeTerms
+operator|.
+name|remove
+argument_list|(
+name|origTerm
+argument_list|)
+expr_stmt|;
+name|cpsm
+operator|.
+name|mappings
+operator|.
+name|put
+argument_list|(
+name|origTerm
+argument_list|,
+name|treeTerms
+argument_list|)
+expr_stmt|;
+name|madeChanges
+operator|=
+literal|true
+expr_stmt|;
+comment|// only add the cpsm to the synonymMappings if it has valid data
+if|if
+condition|(
+operator|!
+name|synonymMappings
+operator|.
+name|containsKey
+argument_list|(
+name|term
+argument_list|)
+operator|&&
+name|cpsm
+operator|.
+name|mappings
+operator|.
+name|get
+argument_list|(
+name|origTerm
+argument_list|)
+operator|!=
+literal|null
+condition|)
+block|{
+name|synonymMappings
+operator|.
+name|put
+argument_list|(
+name|term
+argument_list|,
+name|cpsm
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+return|return
+name|madeChanges
+return|;
+block|}
+DECL|method|applyMapUpdates
+specifier|protected
+name|boolean
+name|applyMapUpdates
+parameter_list|(
 name|Map
 argument_list|<
 name|String
@@ -943,16 +1141,15 @@ argument_list|,
 name|Object
 argument_list|>
 name|jsonMap
+parameter_list|,
+name|boolean
+name|ignoreCase
+parameter_list|)
+block|{
+name|boolean
+name|madeChanges
 init|=
-operator|(
-name|Map
-argument_list|<
-name|String
-argument_list|,
-name|Object
-argument_list|>
-operator|)
-name|updates
+literal|false
 decl_stmt|;
 for|for
 control|(
@@ -996,14 +1193,12 @@ name|cpsm
 operator|==
 literal|null
 condition|)
-block|{
 name|cpsm
 operator|=
 operator|new
 name|CasePreservedSynonymMappings
 argument_list|()
 expr_stmt|;
-block|}
 name|Set
 argument_list|<
 name|String
@@ -1218,11 +1413,6 @@ block|}
 block|}
 return|return
 name|madeChanges
-condition|?
-name|getStoredView
-argument_list|()
-else|:
-literal|null
 return|;
 block|}
 comment|/**      * Returns a Map of how we store and load data managed by this resource,      * which is different than how it is managed at runtime in order to support      * the ignoreCase setting.       */
