@@ -33,6 +33,15 @@ name|java
 operator|.
 name|util
 operator|.
+name|ArrayList
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Arrays
 import|;
 end_import
@@ -823,6 +832,86 @@ operator|+
 literal|"/MB"
 argument_list|,
 literal|"/MB==['Megabyte','MiB','megabyte']"
+argument_list|)
+expr_stmt|;
+comment|// test for SOLR-6878 - by default, expand is true, but only applies when sending in a list
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|m2mSyns
+init|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|()
+decl_stmt|;
+name|m2mSyns
+operator|.
+name|addAll
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+literal|"funny"
+argument_list|,
+literal|"entertaining"
+argument_list|,
+literal|"whimiscal"
+argument_list|,
+literal|"jocular"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertJPut
+argument_list|(
+name|endpoint
+argument_list|,
+name|JSONUtil
+operator|.
+name|toJSON
+argument_list|(
+name|m2mSyns
+argument_list|)
+argument_list|,
+literal|"/responseHeader/status==0"
+argument_list|)
+expr_stmt|;
+name|assertJQ
+argument_list|(
+name|endpoint
+operator|+
+literal|"/funny"
+argument_list|,
+literal|"/funny==['entertaining','jocular','whimiscal']"
+argument_list|)
+expr_stmt|;
+name|assertJQ
+argument_list|(
+name|endpoint
+operator|+
+literal|"/entertaining"
+argument_list|,
+literal|"/entertaining==['funny','jocular','whimiscal']"
+argument_list|)
+expr_stmt|;
+name|assertJQ
+argument_list|(
+name|endpoint
+operator|+
+literal|"/jocular"
+argument_list|,
+literal|"/jocular==['entertaining','funny','whimiscal']"
+argument_list|)
+expr_stmt|;
+name|assertJQ
+argument_list|(
+name|endpoint
+operator|+
+literal|"/whimiscal"
+argument_list|,
+literal|"/whimiscal==['entertaining','funny','jocular']"
 argument_list|)
 expr_stmt|;
 block|}
